--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p>UNIT 1 TO 5 SAB MILEGA!!!</p>
 		<h2>ALL UNITS LINKS-</h2>
 		<ol>
-			<li><a href="file:///C:/Users/HARSH/OneDrive/Desktop/EE%20SEM1/UNIT%201/UNIT%201.pdf">UNIT 1</a></li>
+			<li><a href="UNIT%201.pdf">UNIT 1</a></li>
 			<li><a href="unit2.html">UNIT 2</a></li>
 			<li><a href="unit3.html">UNIT 3</a></li>
 			<li><a href="unit4.html">UNIT 4</a></li>
