--- a/unit3.html
+++ b/unit3.html
@@ -8,12 +8,12 @@
 		<h2>NOTES FOR UNIT 3.</h2>
 		<p>Padhne ki zarurat nahi hai tum talented ho.....</p>
 		<ol>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\D.C. Generators and D.C. Motors.pptx">DC GENERATOR and DC MOTORS PPT</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\DC Motor and generator notes.pdf">DC GENERATOR and DC MOTORS PDF</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Electromagnestism.pdf">ELECTROMAGNETISM</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Numericals on Electromagnetism.pdf">ELECTROMAGNETISM NUMERICALS</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Single Phase Transformers.pptx">SINGLE PHASE TRANSFORMERS PPT</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Single Phase Transformers notes.pdf">SINGLE PHASE TRANSFORMERS PDF</a><br><br></li>
+		<li><a href="D.C. Generators and D.C. Motors.pptx">DC GENERATOR and DC MOTORS PPT</a><br><br></li>
+		<li><a href="DC Motor and generator notes.pdf">DC GENERATOR and DC MOTORS PDF</a><br><br></li>
+		<li><a href="Electromagnestism.pdf">ELECTROMAGNETISM</a><br><br></li>
+		<li><a href="Numericals on Electromagnetism.pdf">ELECTROMAGNETISM NUMERICALS</a><br><br></li>
+		<li><a href="Single Phase Transformers.pptx">SINGLE PHASE TRANSFORMERS PPT</a><br><br></li>
+		<li><a href="Single Phase Transformers notes.pdf">SINGLE PHASE TRANSFORMERS PDF</a><br><br></li>
 		</ol>
 		<h1>PADH LENA BADI MEHNAT SE LIKHA HAI!!!!</h1>
 	</body>
