--- a/unit4.html
+++ b/unit4.html
@@ -8,12 +8,12 @@
 		<h2>NOTES FOR UNIT 4.</h2>
 		<p>Padhne ki zarurat nahi hai tum talented ho.....</p>
 		<ol>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Three_Phase_AC_Circuits.pptx">THREE PHASE AC CIRCUIT</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Three Phase Induction Motor.pptx">THREE PHASE INDUCTION MOTOR</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\3 Phase Induction motor-pages-deleted (1).pdf">3 PHASE INDUCTION MOTOR</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Alternator.pptx">ALTERNATOR</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Alternator numericals (2).pdf">ALTERNATOR NUMERICALS</a><br><br></li>
-		<li><a href="C:\Users\HARSH\OneDrive\Desktop\HTML5CSS3\CSS3\OGF\Alternator-pages-deleted (1).pdf">ALTERNATOR LAST PAGE</a><br><br></li>
+		<li><a href="Three_Phase_AC_Circuits.pptx">THREE PHASE AC CIRCUIT</a><br><br></li>
+		<li><a href="Three Phase Induction Motor.pptx">THREE PHASE INDUCTION MOTOR</a><br><br></li>
+		<li><a href="3 Phase Induction motor-pages-deleted (1).pdf">3 PHASE INDUCTION MOTOR</a><br><br></li>
+		<li><a href="Alternator.pptx">ALTERNATOR</a><br><br></li>
+		<li><a href="Alternator numericals (2).pdf">ALTERNATOR NUMERICALS</a><br><br></li>
+		<li><a href="Alternator-pages-deleted (1).pdf">ALTERNATOR LAST PAGE</a><br><br></li>
 		</ol>
 		<h1>PADH LENA BADI MEHNAT SE LIKHA HAI!!!!</h1>
 	</body>
