--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<p>UNIT 1 TO 5 SAB MILEGA!!!</p>
 		<h2>ALL UNITS LINKS-</h2>
 		<ol>
-			<li><a href="UNIT%201.pdf">UNIT 1</a></li><br><br>
-			<li><a href="unit2.html">UNIT 2</a></li><br><br>
-			<li><a href="unit3.html">UNIT 3</a></li><br><br>
-			<li><a href="unit4.html">UNIT 4</a></li><br><br>
+			<li><a href="UNIT%201.pdf">UNIT 1</a></li><br>
+			<li><a href="unit2.html">UNIT 2</a></li><br>
+			<li><a href="unit3.html">UNIT 3</a></li><br>
+			<li><a href="unit4.html">UNIT 4</a></li><br>
 			<li><a href="Unit5_notes%20(1).pdf">UNIT 5</a></li>
 			
 		</ol>
